fixed nav bar alignment for index

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -84,7 +84,7 @@
 }
 
 .sign_up_button1{
-    margin-left : auto;
+    margin-left : 10px;
     font-family : comfortaa;
     background-color: #2f99e9;
     border-radius: 10px;
